// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders NavigationPills correctly 1`] = `
.emotion-19 {
  overflow: hidden;
  position: relative;
}

.emotion-1 {
  z-index: 100;
  border: 0;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.26),0 1px 4px 0 rgba(0,0,0,0.16);
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  text-align: center;
  line-height: 1;
  background-color: #43B02A;
  color: #FFFFFF;
  position: absolute;
  top: 5px;
  display: none;
  z-index: 100;
  left: 8px;
}

@media (max-width:767px) {
  .emotion-1 {
    display: none;
  }
}

.emotion-1:hover {
  background-color: #177D05;
}

.emotion-1:active {
  background-color: #177D05;
}

.emotion-1:focus {
  background-color: #177D05;
}

.emotion-0 {
  font-size: 16px;
  position: relative;
  font-family: ic-icons;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  speak: none;
  line-height: 1;
  font-smoothing: antialiased;
  osx-font-smoothing: grayscale;
  font-size: 20px;
}

.emotion-16 {
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
  -webkit-transform: translate3d(0px,0,0);
  -ms-transform: translate3d(0px,0,0);
  transform: translate3d(0px,0,0);
  white-space: nowrap;
  position: relative;
}

@media (max-width:767px) {
  .emotion-16 {
    left: inherit;
    overflow-x: scroll;
    display: block;
    -ms-overflow-style: none;
    overflow: -moz-scrollbars-none;
    webkit-overflow-scrolling: touch;
  }
}

.emotion-14 {
  display: inline-block;
  height: 56px;
  min-width: 100%;
  padding-top: 8px;
  padding-right: 8px;
  padding-bottom: 8px;
  padding-left: 24px;
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.emotion-2 {
  margin-right: 10px;
}

.emotion-13 {
  display: inline-block;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
}

.emotion-4 {
  display: inline-block;
}

.emotion-3 {
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  display: block;
  font-size: 14px;
  background-color: #F7F7F7;
  border-radius: 24px;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 4px;
  margin-right: 4px;
  line-height: 1.2;
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  color: #43B02A;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

.emotion-3:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

.emotion-18 {
  z-index: 100;
  border: 0;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.26),0 1px 4px 0 rgba(0,0,0,0.16);
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  text-align: center;
  line-height: 1;
  background-color: #43B02A;
  color: #FFFFFF;
  position: absolute;
  top: 5px;
  display: none;
  z-index: 100;
  right: 8px;
}

@media (max-width:767px) {
  .emotion-18 {
    display: none;
  }
}

.emotion-18:hover {
  background-color: #177D05;
}

.emotion-18:active {
  background-color: #177D05;
}

.emotion-18:focus {
  background-color: #177D05;
}

<div>
  <div
    className="emotion-19"
    onKeyDown={[Function]}
  >
    <button
      aria-label="back"
      className="emotion-1"
      onClick={[Function]}
    >
      <i
        aria-hidden={true}
        className="emotion-0"
      >
        
      </i>
    </button>
    <div
      className="emotion-16"
    >
      <div
        className="emotion-15"
      >
        <div
          className="emotion-14"
          trackProps={
            Object {
              "isSliding": false,
              "left": 0,
              "parentWidth": undefined,
              "showLeftArrow": false,
              "showRightArrow": false,
              "trackBounds": undefined,
              "trackWidth": undefined,
            }
          }
        >
          <label
            className="emotion-2"
          >
            Filter by
          </label>
          <ul
            className="emotion-13"
          >
            <li
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              >
                doms
              </a>
            </li>
            <li
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              >
                doms1
              </a>
            </li>
            <li
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              >
                doms2
              </a>
            </li>
            <li
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              >
                doms3
              </a>
            </li>
            <li
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <button
      aria-label="next"
      className="emotion-18"
      onClick={[Function]}
    >
      <i
        aria-hidden={true}
        className="emotion-0"
      >
        
      </i>
    </button>
  </div>
</div>
`;

exports[`renders NavigationPills wihtout label correctly 1`] = `
.emotion-18 {
  overflow: hidden;
  position: relative;
}

.emotion-1 {
  z-index: 100;
  border: 0;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.26),0 1px 4px 0 rgba(0,0,0,0.16);
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  text-align: center;
  line-height: 1;
  background-color: #43B02A;
  color: #FFFFFF;
  position: absolute;
  top: 5px;
  display: none;
  z-index: 100;
  left: 8px;
}

@media (max-width:767px) {
  .emotion-1 {
    display: none;
  }
}

.emotion-1:hover {
  background-color: #177D05;
}

.emotion-1:active {
  background-color: #177D05;
}

.emotion-1:focus {
  background-color: #177D05;
}

.emotion-0 {
  font-size: 16px;
  position: relative;
  font-family: ic-icons;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  speak: none;
  line-height: 1;
  font-smoothing: antialiased;
  osx-font-smoothing: grayscale;
  font-size: 20px;
}

.emotion-15 {
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
  -webkit-transform: translate3d(0px,0,0);
  -ms-transform: translate3d(0px,0,0);
  transform: translate3d(0px,0,0);
  white-space: nowrap;
  position: relative;
}

@media (max-width:767px) {
  .emotion-15 {
    left: inherit;
    overflow-x: scroll;
    display: block;
    -ms-overflow-style: none;
    overflow: -moz-scrollbars-none;
    webkit-overflow-scrolling: touch;
  }
}

.emotion-13 {
  display: inline-block;
  height: 56px;
  min-width: 100%;
  padding-top: 8px;
  padding-right: 8px;
  padding-bottom: 8px;
  padding-left: 24px;
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.emotion-12 {
  display: inline-block;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
}

.emotion-3 {
  display: inline-block;
}

.emotion-2 {
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  display: block;
  font-size: 14px;
  background-color: #F7F7F7;
  border-radius: 24px;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 4px;
  margin-right: 4px;
  line-height: 1.2;
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  color: #43B02A;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

.emotion-2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

.emotion-17 {
  z-index: 100;
  border: 0;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.26),0 1px 4px 0 rgba(0,0,0,0.16);
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  text-align: center;
  line-height: 1;
  background-color: #43B02A;
  color: #FFFFFF;
  position: absolute;
  top: 5px;
  display: none;
  z-index: 100;
  right: 8px;
}

@media (max-width:767px) {
  .emotion-17 {
    display: none;
  }
}

.emotion-17:hover {
  background-color: #177D05;
}

.emotion-17:active {
  background-color: #177D05;
}

.emotion-17:focus {
  background-color: #177D05;
}

<div>
  <div
    className="emotion-18"
    onKeyDown={[Function]}
  >
    <button
      aria-label="back"
      className="emotion-1"
      onClick={[Function]}
    >
      <i
        aria-hidden={true}
        className="emotion-0"
      >
        
      </i>
    </button>
    <div
      className="emotion-15"
    >
      <div
        className="emotion-14"
      >
        <div
          className="emotion-13"
          trackProps={
            Object {
              "isSliding": false,
              "left": 0,
              "parentWidth": undefined,
              "showLeftArrow": false,
              "showRightArrow": false,
              "trackBounds": undefined,
              "trackWidth": undefined,
            }
          }
        >
          <ul
            className="emotion-12"
          >
            <li
              className="emotion-3"
            >
              <a
                className="emotion-2"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              >
                doms
              </a>
            </li>
            <li
              className="emotion-3"
            >
              <a
                className="emotion-2"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              >
                doms1
              </a>
            </li>
            <li
              className="emotion-3"
            >
              <a
                className="emotion-2"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              >
                doms2
              </a>
            </li>
            <li
              className="emotion-3"
            >
              <a
                className="emotion-2"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              >
                doms3
              </a>
            </li>
            <li
              className="emotion-3"
            >
              <a
                className="emotion-2"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <button
      aria-label="next"
      className="emotion-17"
      onClick={[Function]}
    >
      <i
        aria-hidden={true}
        className="emotion-0"
      >
        
      </i>
    </button>
  </div>
</div>
`;

exports[`renders NavigationPills with each pill's elementAttributes correctly 1`] = `
.emotion-19 {
  overflow: hidden;
  position: relative;
}

.emotion-1 {
  z-index: 100;
  border: 0;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.26),0 1px 4px 0 rgba(0,0,0,0.16);
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  text-align: center;
  line-height: 1;
  background-color: #43B02A;
  color: #FFFFFF;
  position: absolute;
  top: 5px;
  display: none;
  z-index: 100;
  left: 8px;
}

@media (max-width:767px) {
  .emotion-1 {
    display: none;
  }
}

.emotion-1:hover {
  background-color: #177D05;
}

.emotion-1:active {
  background-color: #177D05;
}

.emotion-1:focus {
  background-color: #177D05;
}

.emotion-0 {
  font-size: 16px;
  position: relative;
  font-family: ic-icons;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  speak: none;
  line-height: 1;
  font-smoothing: antialiased;
  osx-font-smoothing: grayscale;
  font-size: 20px;
}

.emotion-16 {
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
  -webkit-transform: translate3d(0px,0,0);
  -ms-transform: translate3d(0px,0,0);
  transform: translate3d(0px,0,0);
  white-space: nowrap;
  position: relative;
}

@media (max-width:767px) {
  .emotion-16 {
    left: inherit;
    overflow-x: scroll;
    display: block;
    -ms-overflow-style: none;
    overflow: -moz-scrollbars-none;
    webkit-overflow-scrolling: touch;
  }
}

.emotion-14 {
  display: inline-block;
  height: 56px;
  min-width: 100%;
  padding-top: 8px;
  padding-right: 8px;
  padding-bottom: 8px;
  padding-left: 24px;
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.emotion-2 {
  margin-right: 10px;
}

.emotion-13 {
  display: inline-block;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
}

.emotion-4 {
  display: inline-block;
}

.emotion-3 {
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  display: block;
  font-size: 14px;
  background-color: #F7F7F7;
  border-radius: 24px;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 4px;
  margin-right: 4px;
  line-height: 1.2;
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  color: #43B02A;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

.emotion-3:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

.emotion-18 {
  z-index: 100;
  border: 0;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.26),0 1px 4px 0 rgba(0,0,0,0.16);
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  text-align: center;
  line-height: 1;
  background-color: #43B02A;
  color: #FFFFFF;
  position: absolute;
  top: 5px;
  display: none;
  z-index: 100;
  right: 8px;
}

@media (max-width:767px) {
  .emotion-18 {
    display: none;
  }
}

.emotion-18:hover {
  background-color: #177D05;
}

.emotion-18:active {
  background-color: #177D05;
}

.emotion-18:focus {
  background-color: #177D05;
}

<div>
  <div
    className="emotion-19"
    onKeyDown={[Function]}
  >
    <button
      aria-label="back"
      className="emotion-1"
      onClick={[Function]}
    >
      <i
        aria-hidden={true}
        className="emotion-0"
      >
        
      </i>
    </button>
    <div
      className="emotion-16"
    >
      <div
        className="emotion-15"
      >
        <div
          ariaLabel="this is an aria label"
          className="emotion-14"
          role="tabs"
          trackProps={
            Object {
              "isSliding": false,
              "left": 0,
              "parentWidth": undefined,
              "showLeftArrow": false,
              "showRightArrow": false,
              "trackBounds": undefined,
              "trackWidth": undefined,
            }
          }
        >
          <label
            className="emotion-2"
          >
            Filter by
          </label>
          <ul
            className="emotion-13"
          >
            <li
              aria-label="doms"
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
                role="tab"
              >
                doms
              </a>
            </li>
            <li
              aria-label="doms1"
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
                role="tab"
              >
                doms1
              </a>
            </li>
            <li
              aria-label="doms2"
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
                role="tab"
              >
                doms2
              </a>
            </li>
            <li
              aria-label="doms3"
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
                role="tab"
              >
                doms3
              </a>
            </li>
            <li
              aria-label="four"
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
                role="tab"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <button
      aria-label="next"
      className="emotion-18"
      onClick={[Function]}
    >
      <i
        aria-hidden={true}
        className="emotion-0"
      >
        
      </i>
    </button>
  </div>
</div>
`;

exports[`renders NavigationPills with elementAttributes correctly 1`] = `
.emotion-19 {
  overflow: hidden;
  position: relative;
}

.emotion-1 {
  z-index: 100;
  border: 0;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.26),0 1px 4px 0 rgba(0,0,0,0.16);
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  text-align: center;
  line-height: 1;
  background-color: #43B02A;
  color: #FFFFFF;
  position: absolute;
  top: 5px;
  display: none;
  z-index: 100;
  left: 8px;
}

@media (max-width:767px) {
  .emotion-1 {
    display: none;
  }
}

.emotion-1:hover {
  background-color: #177D05;
}

.emotion-1:active {
  background-color: #177D05;
}

.emotion-1:focus {
  background-color: #177D05;
}

.emotion-0 {
  font-size: 16px;
  position: relative;
  font-family: ic-icons;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  speak: none;
  line-height: 1;
  font-smoothing: antialiased;
  osx-font-smoothing: grayscale;
  font-size: 20px;
}

.emotion-16 {
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
  -webkit-transform: translate3d(0px,0,0);
  -ms-transform: translate3d(0px,0,0);
  transform: translate3d(0px,0,0);
  white-space: nowrap;
  position: relative;
}

@media (max-width:767px) {
  .emotion-16 {
    left: inherit;
    overflow-x: scroll;
    display: block;
    -ms-overflow-style: none;
    overflow: -moz-scrollbars-none;
    webkit-overflow-scrolling: touch;
  }
}

.emotion-14 {
  display: inline-block;
  height: 56px;
  min-width: 100%;
  padding-top: 8px;
  padding-right: 8px;
  padding-bottom: 8px;
  padding-left: 24px;
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.emotion-2 {
  margin-right: 10px;
}

.emotion-13 {
  display: inline-block;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
}

.emotion-4 {
  display: inline-block;
}

.emotion-3 {
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  display: block;
  font-size: 14px;
  background-color: #F7F7F7;
  border-radius: 24px;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 4px;
  margin-right: 4px;
  line-height: 1.2;
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  color: #43B02A;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

.emotion-3:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

.emotion-18 {
  z-index: 100;
  border: 0;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.26),0 1px 4px 0 rgba(0,0,0,0.16);
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  text-align: center;
  line-height: 1;
  background-color: #43B02A;
  color: #FFFFFF;
  position: absolute;
  top: 5px;
  display: none;
  z-index: 100;
  right: 8px;
}

@media (max-width:767px) {
  .emotion-18 {
    display: none;
  }
}

.emotion-18:hover {
  background-color: #177D05;
}

.emotion-18:active {
  background-color: #177D05;
}

.emotion-18:focus {
  background-color: #177D05;
}

<div>
  <div
    className="emotion-19"
    onKeyDown={[Function]}
  >
    <button
      aria-label="back"
      className="emotion-1"
      onClick={[Function]}
    >
      <i
        aria-hidden={true}
        className="emotion-0"
      >
        
      </i>
    </button>
    <div
      className="emotion-16"
    >
      <div
        className="emotion-15"
      >
        <div
          ariaLabel="this is an aria label"
          className="emotion-14"
          role="tabs"
          trackProps={
            Object {
              "isSliding": false,
              "left": 0,
              "parentWidth": undefined,
              "showLeftArrow": false,
              "showRightArrow": false,
              "trackBounds": undefined,
              "trackWidth": undefined,
            }
          }
        >
          <label
            className="emotion-2"
          >
            Filter by
          </label>
          <ul
            className="emotion-13"
          >
            <li
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              >
                doms
              </a>
            </li>
            <li
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              >
                doms1
              </a>
            </li>
            <li
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              >
                doms2
              </a>
            </li>
            <li
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              >
                doms3
              </a>
            </li>
            <li
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <button
      aria-label="next"
      className="emotion-18"
      onClick={[Function]}
    >
      <i
        aria-hidden={true}
        className="emotion-0"
      >
        
      </i>
    </button>
  </div>
</div>
`;

exports[`renders NavigationPills with inner elementAttributes correctly 1`] = `
.emotion-19 {
  overflow: hidden;
  position: relative;
}

.emotion-1 {
  z-index: 100;
  border: 0;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.26),0 1px 4px 0 rgba(0,0,0,0.16);
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  text-align: center;
  line-height: 1;
  background-color: #43B02A;
  color: #FFFFFF;
  position: absolute;
  top: 5px;
  display: none;
  z-index: 100;
  left: 8px;
}

@media (max-width:767px) {
  .emotion-1 {
    display: none;
  }
}

.emotion-1:hover {
  background-color: #177D05;
}

.emotion-1:active {
  background-color: #177D05;
}

.emotion-1:focus {
  background-color: #177D05;
}

.emotion-0 {
  font-size: 16px;
  position: relative;
  font-family: ic-icons;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  speak: none;
  line-height: 1;
  font-smoothing: antialiased;
  osx-font-smoothing: grayscale;
  font-size: 20px;
}

.emotion-16 {
  -webkit-transition: -webkit-transform 150ms ease-in-out;
  -webkit-transition: transform 150ms ease-in-out;
  transition: transform 150ms ease-in-out;
  -webkit-transform: translate3d(0px,0,0);
  -ms-transform: translate3d(0px,0,0);
  transform: translate3d(0px,0,0);
  white-space: nowrap;
  position: relative;
}

@media (max-width:767px) {
  .emotion-16 {
    left: inherit;
    overflow-x: scroll;
    display: block;
    -ms-overflow-style: none;
    overflow: -moz-scrollbars-none;
    webkit-overflow-scrolling: touch;
  }
}

.emotion-14 {
  display: inline-block;
  height: 56px;
  min-width: 100%;
  padding-top: 8px;
  padding-right: 8px;
  padding-bottom: 8px;
  padding-left: 24px;
  background-color: #FFFFFF;
  box-sizing: border-box;
}

.emotion-2 {
  margin-right: 10px;
}

.emotion-13 {
  display: inline-block;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
}

.emotion-4 {
  display: inline-block;
}

.emotion-3 {
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  display: block;
  font-size: 14px;
  background-color: #F7F7F7;
  border-radius: 24px;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 4px;
  margin-right: 4px;
  line-height: 1.2;
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  color: #43B02A;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

.emotion-3:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

.emotion-18 {
  z-index: 100;
  border: 0;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.26),0 1px 4px 0 rgba(0,0,0,0.16);
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  text-align: center;
  line-height: 1;
  background-color: #43B02A;
  color: #FFFFFF;
  position: absolute;
  top: 5px;
  display: none;
  z-index: 100;
  right: 8px;
}

@media (max-width:767px) {
  .emotion-18 {
    display: none;
  }
}

.emotion-18:hover {
  background-color: #177D05;
}

.emotion-18:active {
  background-color: #177D05;
}

.emotion-18:focus {
  background-color: #177D05;
}

<div>
  <div
    className="emotion-19"
    onKeyDown={[Function]}
  >
    <button
      aria-label="back"
      className="emotion-1"
      onClick={[Function]}
    >
      <i
        aria-hidden={true}
        className="emotion-0"
      >
        
      </i>
    </button>
    <div
      className="emotion-16"
    >
      <div
        className="emotion-15"
      >
        <div
          className="emotion-14"
          role="tabs"
          trackProps={
            Object {
              "isSliding": false,
              "left": 0,
              "parentWidth": undefined,
              "showLeftArrow": false,
              "showRightArrow": false,
              "trackBounds": undefined,
              "trackWidth": undefined,
            }
          }
        >
          <label
            className="emotion-2"
          >
            Filter by
          </label>
          <ul
            ariaLabel="this is an aria label"
            className="emotion-13"
          >
            <li
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              >
                doms
              </a>
            </li>
            <li
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              >
                doms1
              </a>
            </li>
            <li
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              >
                doms2
              </a>
            </li>
            <li
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              >
                doms3
              </a>
            </li>
            <li
              className="emotion-4"
            >
              <a
                className="emotion-3"
                data-bypass={true}
                href="#"
                onClick={[Function]}
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <button
      aria-label="next"
      className="emotion-18"
      onClick={[Function]}
    >
      <i
        aria-hidden={true}
        className="emotion-0"
      >
        
      </i>
    </button>
  </div>
</div>
`;

exports[`renders NavigationPills without pills correctly 1`] = `<div />`;
